--- a/src/main/webapp/public/assets/css/main.css
+++ b/src/main/webapp/public/assets/css/main.css
@@ -1,17 +1,95 @@
 body{
-     background-color:#fff;
-     font-size:15px !important;
- }
- h1{
-     font-size:orange;
- }
- .id{
+    background:#f9f9f9;
+}
+.navbar-main{
+    display:flex;
+    flex-direction: row;
+    font-family: Roboto;
+    height: 80px;
+    background:linear-gradient(45deg,#303f9f,#7b1fa2)!important ;
+    align-items: center;
+    justify-content: center;
+}
 
+.navbar-main a{
+    color:#fff;
+    font-size:24px;
+}
+.navbar-main a:first-letter{
+    font-size:32px;
+}
 
+.login-wrapper{
+    width:100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
- }
+.input-field input[type=date]:focus + label,
+.input-field input[type=text]:focus + label,
+.input-field input[type=email]:focus + label,
+.input-field input[type=password]:focus + label {
+  color: #e91e63;
+}
 
+.input-field input[type=date]:focus,
+.input-field input[type=text]:focus,
+.input-field input[type=email]:focus,
+.input-field input[type=password]:focus {
+  border-bottom: 2px solid #e91e63;
+  box-shadow: none;
+}
 
- #some{
+.container-max{
+    width:100%;
+    max-width:1920px;
+   
+}
 
- }
+.navbar-inner{
+    height: 50px;
+    background:linear-gradient(45deg ,#303f9f,#303f5f)!important ;
+
+}
+
+.logo{
+    background:linear-gradient(45deg ,#7b1fa2,#303f9f)!important ;
+    height: 50px !important;
+}
+main{
+    margin-left:310px;
+    /* overflow-x: scroll; */
+}
+.nav-wrapper >div{
+    display: flex;
+}
+.highlight tbody tr:hover {
+    background:olivedrab!important;
+    cursor: pointer;
+    
+}
+.collapsible{
+    border:0;
+}
+.table-operation-wrapper{
+    margin-left:10px;
+    width: 400px;
+    display: inline-block;
+}
+.table-operation-wrapper a{
+    display:inline-flex;
+    align-items: center;
+}
+.table-operation-wrapper .material-icons{
+    display:inline-block;
+    align-items: center;
+    height: 24px;
+    line-height: 1 !important;
+}
+/*Options*/
+
+.margin-zero{
+    margin:0 !important;
+}
