--- a/src/main/webapp/public/assets/css/main.css
+++ b/src/main/webapp/public/assets/css/main.css
@@ -88,6 +88,11 @@ main{
     height: 24px;
     line-height: 1 !important;
 }
+
+.err-login{
+    color:red;
+    font-style: italic;
+}
 /*Options*/
 
 .margin-zero{
